--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "start": "webpack-dev-server"
   },
   "dependencies": {
+    "mobx": "^3.1.11",
+    "mobx-react": "^4.2.1",
     "react": "^15.5.4",
     "react-dom": "^15.5.4"
   },
