--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "mobx": "^3.1.11",
     "mobx-react": "^4.2.1",
+    "mobx-state-tree": "^0.6.3",
     "react": "^15.5.4",
     "react-dom": "^15.5.4"
   },
