--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mobx-react": "^4.2.1",
     "mobx-state-tree": "^0.6.3",
     "react": "^15.5.4",
+    "react-bootstrap": "^0.31.0",
     "react-dom": "^15.5.4",
     "remotedev": "^0.2.7"
   },
