--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "start": "webpack-dev-server"
   },
   "dependencies": {
+    "material-ui": "^0.18.3",
     "mobx": "^3.1.11",
     "mobx-react": "^4.2.1",
     "mobx-state-tree": "^0.6.3",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-tap-event-plugin": "^2.0.1",
     "remotedev": "^0.2.7"
   },
   "devDependencies": {
