--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-tap-event-plugin": "^2.0.1",
-    "remotedev": "^0.2.7"
+    "remotedev": "^0.2.7",
+    "styled-components": "^2.0.1"
   },
   "devDependencies": {
     "@types/react": "^15.0.24",
